# solanalysis-bot

./: .env  Cargo.toml  Cargo_old.toml  Makefile  README.md
proto/: api_gateway.proto  solana_service.proto
services/api-gateway/: Cargo.toml
services/api-gateway/src/: config.rs  database.rs  grpc_server.rs  main.rs
services/solana-service/: Cargo.toml
services/solana-service/src/: grpc_server.rs  main.rs
services/telegram-bot/: Cargo.toml  main.rs
services/telegram-bot/src/: commands.rs  grpc_client.rs  main.rs  main_new.rs
services/telegram-bot/src/grpc_clients/: api_gateway.rs  mod.rs  solana_service.rs
services/telegram-bot/src/handlers/: command_registry.rs  help.rs  increment_counter.rs  mod.rs  track_wallet.rs  types.rs
services/telegram-bot/src/services/: increment_counter.rs  mod.rs  track_wallet.rs
shared/database/migrations/: 20250715_create_counter.sql
shared/proto-gen/: Cargo.toml  build.rs
shared/proto-gen/src/: api_gateway.rs  lib.rs  solana_service.rs
src/: .env
