[package]
name = "solana-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC server
tonic = "0.11"
prost = "0.12"

# Solana sdk
solana-client = "2.3"
solana-sdk = "2.3"
solana-account-decoder = "2.3"
solana-transaction-status = "2.3"
solana-rpc-client = "2.3"

# Anchor framwork
anchor-client = "0.31"
anchor-lang = "0.31"

# Async
tokio = {version = "1.39", features = ["macros", "rt-multi-thread"]}
proto-gen = {path = "../../shared/proto-gen"}

#Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
bitflags = "2.9"
# Defi
base64 = "0.22"
bs58 = "0.5"
borsh = "1.5"
jupiter-swap-api-client = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
