[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Telegram bot
teloxide = "=0.17.0"

# gRPC client
tonic = "0.11"
prost = "0.12"

#HTTP client (just in-case)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tokio-util = {version = "0.7", features = ["codec"]}

# Logging
log = "0.4"
env_logger = "0.10"

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

proto-gen = { path = "../../shared/proto-gen" }


# Solana core
solana-client = "2.3"
solana-sdk = "2.3"
solana-account-decoder = "2.3"
solana-transaction-status = "2.3"
solana-rpc-client = "2.3"
# Anchor (Solana) framwork
anchor-client = "0.31"
anchor-lang = "0.31"
# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "rust_decimal"] }
#Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
bitflags = "2.9"
# Defi
base64 = "0.22"
bs58 = "0.5"
borsh = "1.5"
jupiter-swap-api-client = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
